<?xml version="1.0"?>
<package format="2">
  <name>foxglove_websocket_ros</name>
  <version>0.0.0</version>
  <description>Websocket server exposing ROS subscribers via the foxglove websocket protocol</description>
  <author email="achim.krauch@gmail.com">Hans-Joachim Krauch</author>
  <maintainer email="achim.krauch@gmail.com">Hans-Joachim Krauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>topic_tools</depend>
  <depend>libwebsocketpp-dev</depend>
  <depend>nlohmann-json-dev</depend>
</package>
