<?xml version="1.0"?>
<package format="2">
  <name>foxglove_websocket_server</name>
  <version>0.0.0</version>
  <description>Websocket server exposing ROS topics via the foxglove websocket protocol</description>
  <author email="achim.krauch@gmail.com">Hans-Joachim Krauch</author>
  <maintainer email="achim.krauch@gmail.com">Hans-Joachim Krauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libwebsocketpp-dev</depend>
  <depend>nlohmann-json-dev</depend>
  <!-- Has been deprecated in favor of 'ros_msg_parser', but that package hasn't been released yet. -->
  <depend>rosapi_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>rosapi</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
